@@ -1664,3 +1664,10 @@ Sat Sep 11 15:31:35 PDT 1999
 (Raster)
 
 hm ok - fix that pager bug i just put in.. NOw it does what it was meant to
+
+-------------------------------------------------------------------------------
+
+Sat Sep 11 15:56:18 PDT 1999
+(Raster)
+
+ok - fixed that iconify and pager bug for good :)
